# practicum-async-api

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: test_async_api.yml  test_etl.yml
async_api/: .dockerignore  .env.docker  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
async_api/src/: README.md  Redme.md  main.py
async_api/src/api/: dependencies.py  health.py
async_api/src/api/v1/: Redme.md  films.py  genres.py  persons.py
async_api/src/api/v1/schemas/: films.py  genres.py  persons.py
async_api/src/core/: config.py  settings.py
async_api/src/db/: Redme.md  elastic.py  redis.py
async_api/src/models/: Redme.md  base.py  film.py  genre.py  mixins.py  person.py  value_objects.py
async_api/src/services/: Redme.md  film.py  genre.py  person.py  utils.py
async_api/src/utils/: cache.py
async_api/tests/: conftest.py
async_api/tests/functional/: README.md  conftest.py  docker-compose.ci.yml  docker-compose.yml  settings.py
async_api/tests/functional/envs/: .env.api.docker  .env.test  .env.test.docker
async_api/tests/functional/src/: test_film.py  test_genre.py  test_person.py
async_api/tests/functional/testdata/: elasticsearch_mappings.py
async_api/tests/functional/utils/: factories.py  logger.py  wait_for_api.py  wait_for_elasticsearch.py  wait_for_redis.py
async_api/tests/test_example/: test_hello.py
async_api/tests/test_services/: conftest.py  test_film_service.py  test_genre_service.py  test_person_service.py
etl/: .dockerignore  .env.docker  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
etl/etl/: dependencies.py  dto.py  extractor.py  jobs.py  loader.py  main.py  pipeline.py  settings.py  state.py  transformer.py
etl/etl/dto/: __init__.py  elasticsearch.py  postgres.py
etl/etl/storage/: file_storage.py
etl/infra/elasticsearch/: create_indexes.sh
etl/infra/elasticsearch/indexes/: persons.json
etl/infra/postgres/: .env.example
infra/elasticsearch/: create_indexes.sh
infra/elasticsearch/indexes/: movies.json  persons.json
infra/nginx/: nginx.conf
infra/nginx/configs/: site.conf
infra/postgres/: pg_dump.sql
