[build-system]  # https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]  # https://python-poetry.org/docs/pyproject/
name = "etl"
version = "0.1.0"
description = "ETL for data transfer from PostgreSQL to Elasticsearch"
readme = "README.md"
authors = ["a1d4r <a1d4r@yandex.ru>"]
repository = "https://github.com/a1d4r/new_admin_panel_sprint_3"
homepage = "https://github.com/a1d4r/new_admin_panel_sprint_3"

[tool.poetry.dependencies]  # https://python-poetry.org/docs/dependency-specification/
python = "^3.12"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
elasticsearch = "^8.12.1"
apscheduler = "^3.10.4"
tenacity = "^8.2.3"
elasticsearch-dsl = "^8.12.0"

[tool.poetry.group.dev.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
black = "^24.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.2"
pytest = "^8.0.2"
coverage = "^7.4.3"
typeguard = "^4.1.5"
ruff = "^0.3.0"
safety = "<3.0.0"  # Pinned to <3.0.0 due to https://github.com/pyupio/safety/issues/504
pytest-custom-exit-code = "^0.3.0"

[tool.black]  # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
target-version = ["py312"]
line-length = 100
color = true

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
junit_xml = "reports/mypy.xml"
python_version = "3.12"
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
color_output = true
plugins = [
  "pydantic.mypy"
]

strict = true  # https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pydantic-mypy]
# https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::ImportWarning"]
testpaths = ["etl", "tests"]
xfail_strict = true

# Extra options:
addopts = [
  "--color=yes",
  "--failed-first",
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "--verbosity=2",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--typeguard-packages=etl",
  "--junitxml=reports/pytest.xml",
  "--suppress-no-test-exit-code"
]

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["etl"]

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.pylint.basic]
class-attribute-naming-style = "any"
class-const-naming-style = "any"
good-names = ["i", "j", "k", "e", "x", "id", "_", "pk"]

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.ruff]  # https://github.com/charliermarsh/ruff
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore-init-module-imports = true
select = ["ALL"]
ignore = [
  "TD", # flake8-todos
  "FIX", # flake8-fixme
  "ANN", # flake8-annotations (handled by mypy)
  "A003", # Class attribute `id` is shadowing a Python builtin
  "EM", # flake8-errmsg - String literals in exceptions
  "E501", # pycodestyle - line too long (handled by black)
  "RUF001", # cyrillic strings
  "RUF002", # cyrillic docstrings
  "D100", # pydocstyle - Missing docstring in public module
  "D101", # pydocstyle - Missing docstring in public class
  "D102", # pydocstyle - Missing docstring in public method
  "D103", # pydocstyle - Missing docstring in public function
  "D104", # pydocstyle - Missing docstring in public package
  "D105", # pydocstyle - Missing docstring in magic method
  "D106", # pydocstyle - Missing docstring in public nested class
  "D107", # pydocstyle - Missing docstring in __init__
  "D205", # pydocstyle - 1 blank line required between summary line and description
]
unfixable = [
  "F", # pyflakes
  "ERA", # eradicate - commented-out code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # Unused import
  "F403", # Import star
]
"tests/**/*.py" = [
  "S101", # Use of assert detected (assert allowed in tests)
  "PLR2004", # Magic value used in comparison
  "RUF001", # String contains ambiguous letter
]

[tool.ruff.lint.flake8-tidy-imports]  # https://docs.astral.sh/ruff/settings/#flake8-tidy-imports
ban-relative-imports = "all"

[tool.ruff.lint.isort]  # https://docs.astral.sh/ruff/settings/#isort
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder"]
lines-between-types = 1
split-on-trailing-comma = false

[tool.ruff.lint.isort.sections]
"typing" = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]

[tool.ruff.lint.pycodestyle]  # https://docs.astral.sh/ruff/settings/#pycodestyle
max-doc-length = 100

[tool.ruff.lint.pydocstyle]  # https://docs.astral.sh/ruff/settings/#pydocstyle
convention = "google"

[tool.ruff.lint.pylint]  # https://docs.astral.sh/ruff/settings/#pylint
allow-magic-value-types = ["int", "str", "bytes"]
max-args = 10
max-statements = 30
